# example-catch2-conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
lib/: CMakeLists.txt  Cache.h
test/: CMakeLists.txt  CacheTest.cpp  FactorialTest.cpp
